buildscript {
    repositories {
        maven { url = "https://plugins.gradle.org/m2/" }
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        classpath 'gradle.plugin.org.jetbrains.gradle.plugin.idea-ext:gradle-idea-ext:1.2'
    }
}

plugins {
    id 'java-library'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.+'
    id 'com.google.protobuf' version '0.9.4'
    id 'com.gradleup.shadow' version '9.4.1'
}

apply plugin: 'org.jetbrains.gradle.plugin.idea-ext'

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

apply from: 'gradle/local-properties.gradle'
apply from: 'gradle/native.gradle'
apply from: 'gradle/fast-run.gradle'
apply from: 'gradle/schema.gradle'
apply from: 'gradle/builtin-index.gradle'

version = mod_version
group = 'com.elfmcys.ysm'
archivesBaseName = 'ysm'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

legacyForge {
    version = "1.20.1-47.4.3"

    parchment {
        mappingsVersion = '+'
        minecraftVersion = '1.20.1'
    }

    // validateAccessTransformers = true
    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        configureEach {
            logLevel = org.slf4j.event.Level.DEBUG
            jvmArguments = [
                    "-XX:+IgnoreUnrecognizedVMOptions",
                    "-XX:+AllowEnhancedClassRedefinition"
            ]
        }

        client {
            client()
            gameDirectory = project.file('run/client_a')
        }

        client2 {
            client()
            gameDirectory = project.file('run/client_b')
            programArguments = ["--username", "tartaric_acid"]
        }

        server {
            server()
            gameDirectory = project.file('run/server')
        }
    }

    mods {
        ysm {
            sourceSet sourceSets.main
        }
    }
}

mixin {
    add sourceSets.main, "ysm.refmap.json"
    config "ysm.mixins.json"
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

processResources {
    inputs.property "mod_version", project.version
    filteringCharset "UTF-8"

    from("LICENSE") {
        into "META-INF"
        rename { "LICENSE-YSM" }
    }
    from("NOTICE.md") {
        into "META-INF"
    }

    filesMatching("META-INF/mods.toml") {
        expand "mod_version": project.version
    }
}

repositories {
    mavenCentral()
    flatDir {
        dir 'libs'
    }
    maven {
        name = "Curse Maven"
        url = "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }
    maven {
        // Add jitpack to repositories
        url 'https://jitpack.io'
    }
    maven {
        name = "Curios"
        url = uri("https://maven.theillusivec4.top/")
    }
}

def mavenCentralHosts = ['repo.maven.apache.org', 'repo1.maven.org']
repositories.withType(MavenArtifactRepository).configureEach { repo ->
    if (!mavenCentralHosts.contains(repo.url.host)) {
        repo.content {
            excludeGroup 'com.google.protobuf'
            excludeGroup 'us.hebi.quickbuf'
        }
    }
}

configurations {
    ysmImplementation
    implementation.extendsFrom ysmImplementation
    additionalRuntimeClasspath.extendsFrom ysmImplementation
}

dependencies {
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    annotationProcessor 'io.github.llamalad7:mixinextras-common:0.3.6'
    compileOnly 'org.jetbrains:annotations:26.0.1'

    ysmImplementation 'us.hebi.quickbuf:quickbuf-runtime:1.4'
    implementation 'org.yaml:snakeyaml:2.2'

    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    modCompileOnly 'libs:firstperson-forge:2.2.3-mc1.20'
    modCompileOnly 'libs:notenoughanimations-forge:1.6.4-mc1.20'
    modCompileOnly 'libs:oculus_legacy:mc1.20.1-1.6.13'
    modCompileOnly 'libs:oculus:mc1.20.1-1.7.0'
    collabClientImplementation "curse.maven:embeddium-908741:${embeddium_id}"

    // 需要这样写，才能通过编译，并优先运行重锋
    modCompileOnly "maven.modrinth:slashblade-resharped:1.1.6-1.20.1"
    modCompileOnly "curse.maven:slashblade-241596:4789018"
    collabRuntimeOnly "maven.modrinth:slashblade-resharped:1.1.6-1.20.1"

    collabImplementation "curse.maven:carry-on-274259:${carry_on_id}"
    collabImplementation "top.theillusivec4.curios:curios-forge:${curios_version}"
    collabImplementation "curse.maven:caelus-308989:${caelus_id}"
    collabImplementation "curse.maven:cosmetic-armor-reworked-237307:${cosmetic_armor_id}"
    collabImplementation "curse.maven:elytra-slot-317716:${elytra_slot_id}"
    collabImplementation "maven.modrinth:parcool:1.20.1-3.4.1.2-forge"
    collabImplementation 'curse.maven:timeless-and-classics-zero-1028108:6654541-sources-6654543'

    // swem 需要
    collabImplementation "curse.maven:playeranimator-658587:4587214"
    collabImplementation "curse.maven:geckolib-388172:5460309"
    collabImplementation "curse.maven:swem-582697:${swem_id}"

    // 女仆模组兼容
    collabImplementation "curse.maven:touhou-little-maid-355044:7198486-sources-7198488"

    // 背包兼容
    collabImplementation "maven.modrinth:sophisticated-core:1.20.1-1.3.6.1514-forge"
    collabImplementation "maven.modrinth:sophisticated-backpacks:1.20.1-3.24.25.1566-forge"

    // jade 和 top 信息显示
    collabImplementation "maven.modrinth:jade:11.8.0-forge"
    modCompileOnly "curse.maven:the-one-probe-245211:4629624"

    // 卓越前线
    collabImplementation "libs:superbwarfare-1.20.1:0.8.7.1-c6d401e0e"

    // 机械动力，兼容那个扳手
    modCompileOnly "maven.modrinth:create:1.20.1-6.0.6"

    // 简单帽子
    collabImplementation "maven.modrinth:simple-hats:1.20.1-0.3.2-forge"

    // Better Combat
    collabImplementation "maven.modrinth:better-combat:1.8.6+1.20.1-forge"
    collabRuntimeOnly "maven.modrinth:cloth-config:11.1.136+forge"

    // 沉浸音乐
    collabImplementation "maven.modrinth:immersive-melodies:0.6.0+1.20.1-forge"

    // 铁魔法
    collabImplementation "maven.modrinth:irons-spells-n-spellbooks:1.20.1-3.4.0.11-forge"
    // modImplementation "curse.maven:irons-spells-n-spellbooks-855414:7402504"

    // JEI / EMI
    collabImplementation "maven.modrinth:jei:15.20.0.112-forge"
    collabImplementation "maven.modrinth:emi:1.1.22+1.20.1+forge"

    collabRuntimeOnly "maven.modrinth:moonlight:1.20-2.16.19-forge"
    collabRuntimeOnly "maven.modrinth:mmmmmmmmmmmm:1.20-2.0.9-forge"

    // Real Camera
    collabClientImplementation "maven.modrinth:real-camera:0.7.4-beta-1.20.1-forge"

    collabImplementation "maven.modrinth:immersive-aircraft:GsVmbbkj"
    collabImplementation "maven.modrinth:simple-planes:1.20.1-5.3.0"

    // 手机端的仿触屏模组
    // modImplementation "maven.modrinth:touchcontroller:0.2.1-beta14+forge-1.20.1"

    // 引入 MixinExtras 以解决一些棘手的 Mixin 冲突问题（比如 @Redirect 不能嵌套）
    // Fabric / NeoForge 中自带 MixinExtras，无需打包
    modCompileOnly "io.github.llamalad7:mixinextras-common:0.3.6"
    jarJar(modImplementation("io.github.llamalad7:mixinextras-forge:0.3.6")) {
        version {
            strictly '[0.3.6,)'
            prefer '0.3.6'
        }
    }

    // 其他运行测试模组
    collabRuntimeOnly "maven.modrinth:curtain:1.3.2-1.20.1"
    collabRuntimeOnly "maven.modrinth:mantle:1.11.28"
    collabRuntimeOnly "maven.modrinth:tinkers-construct:3.9.0.6"
    collabImplementation "curse.maven:shoulder-surfing-reloaded-243190:6543482"
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

sourceSets {
    test {
        compileClasspath += sourceSets.main.output + sourceSets.main.compileClasspath
        runtimeClasspath += sourceSets.main.output + sourceSets.main.runtimeClasspath
    }
}

def playgroundMainClass = providers.gradleProperty('playgroundMainClass')
        .orElse('com.elfmcys.ysm.playground.Playground')

tasks.register('runPlayground', JavaExec) {
    group = 'application'
    description = 'Runs the playground main class from the test source set.'
    dependsOn tasks.named('testClasses')
    classpath = sourceSets.test.runtimeClasspath
    mainClass = playgroundMainClass
}

jar {
    manifest.attributes([
            "Implementation-Title"  : project.name,
            "Implementation-Version": "${version}",
            "MixinConfigs"          : "ysm.mixins.json"
    ])
    archiveClassifier = "raw"
}

def reobfJarTask = tasks.named('reobfJar')
// Shadow adds the development-mapped main output by default; reobfJar must be the only mod source.
def developmentMainOutput = sourceSets.main.output.files.collect {
    it.toPath().toAbsolutePath().normalize()
}

tasks.named('shadowJar') {
    dependsOn reobfJarTask
    from(reobfJarTask.flatMap { it.archiveFile }.map { archive ->
        project.zipTree(archive.asFile)
    })
    configurations = [project.configurations.ysmImplementation]
    archiveClassifier = ''
    exclude { entry ->
        def entryPath = entry.file.toPath().toAbsolutePath().normalize()
        developmentMainOutput.any { entryPath.startsWith(it) }
    }
    exclude '**/*.proto'
    relocate 'us.hebi.quickbuf', 'com.elfmcys.quickbuf'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += [
            '-Xlint:-removal'
    ]
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
